# ncvr-ident-query

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docker/initdb.d/: 10-setup-ncvr.sh
ncvr/: main.py
