[tool.poetry]
name = "ncvr-analysis"
version = "0.1.0"
description = "Application for running identification queries against the NCVR database"
authors = ["Maximilian <git@eulenbu.de>"]
readme = "README.md"
packages = [{include = "ncvr"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
psycopg = {extras = ["binary"], version = "^3.1.12"}
prettytable = "^3.9.0"

[tool.poetry.scripts]
ncvr = "ncvr.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
